objects/Order_Discount__c.object
<CustomObject>
    <description>Used for calculating ordering discount matrix based on dealer tiers and bulk orders

Created for EU Pricing matrix enhancement Dec 2014</description>
    <fields>
        <fullName>Bundle_Quantity__c</fullName>
        <label>Bundle Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country to which the discount record applies</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Tier__c</fullName>
        <description>Dealer trier to which the discount is applicable</description>
        <label>Dealer Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Authorized</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discontinue_Date__c</fullName>
        <description>Date on which the discount discontinues</description>
        <label>Discontinue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount Percentage</description>
        <label>Discount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Discount Effective Date</description>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <formula>Oracle_Item_ID__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Quantity__c</fullName>
        <defaultValue>99999</defaultValue>
        <description>Maximum Quantity for the order to get discount</description>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Quantity__c</fullName>
        <description>Minimum Quantity for the order to get discount</description>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oracle_Item_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Oracle item id</description>
        <label>Oracle Item ID</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Order Discounts</relationshipLabel>
        <relationshipName>Order_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Fee__c</fullName>
        <description>Service Fee. New requirement for EU Pricing.</description>
        <label>Service Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Theatre__c</fullName>
        <description>Region/Market to which the discount applies
Eg.
North America
Australia
Asia Pacific</description>
        <label>Theatre</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East and Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America and the Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Order Discount</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Theatre__c</columns>
        <columns>Oracle_Item_ID__c</columns>
        <columns>Item_Description__c</columns>
        <columns>Dealer_Tier__c</columns>
        <columns>Country__c</columns>
        <columns>Discount__c</columns>
        <columns>Minimum_Quantity__c</columns>
        <columns>Maximum_Quantity__c</columns>
        <columns>Bundle_Quantity__c</columns>
        <columns>Service_Fee__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Effective_Date__c</columns>
        <columns>Discontinue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Specific</fullName>
        <columns>NAME</columns>
        <columns>Bundle_Quantity__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Theatre__c</columns>
        <columns>Oracle_Item_ID__c</columns>
        <columns>Item_Description__c</columns>
        <columns>Maximum_Quantity__c</columns>
        <columns>Minimum_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>United States</value>
        </filters>
        <label>Specific</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OD-{000000}</displayFormat>
        <label>Order Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>